기존 -> 로그인 화면, 회원 정보 입력 화면에 이메일, 비밀번호 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,7 @@
         <activity android:name=".save"/>
         <activity android:name=".nickname"/>
         <activity android:name=".mysprout"/>
+        <activity android:name=".Login" />
 
     </application>
 
