--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -7,5 +7,40 @@
       "dependsOn": [],
       "customAuth": false
     }
+  },
+  "api": {
+    "mysprout": {
+      "service": "AppSync",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": [
+        {
+          "category": "auth",
+          "resourceName": "mysproutbb07d4b0",
+          "attributes": [
+            "UserPoolId"
+          ]
+        }
+      ],
+      "output": {
+        "authConfig": {
+          "defaultAuthentication": {
+            "authenticationType": "AMAZON_COGNITO_USER_POOLS",
+            "userPoolConfig": {
+              "userPoolId": "authmysproutbb07d4b0"
+            }
+          },
+          "additionalAuthenticationProviders": [
+            {
+              "authenticationType": "API_KEY",
+              "apiKeyConfig": {
+                "apiKeyExpirationDays": 90,
+                "apiKeyExpirationDate": "2022-07-27T18:44:33.012Z",
+                "description": ""
+              }
+            }
+          ]
+        }
+      }
+    }
   }
 }
