--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     implementation 'com.amplifyframework:core:1.35.2'
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
     implementation 'com.amplifyframework:aws-auth-cognito:1.35.2'
+    implementation 'com.amplifyframework:core:1.35.2'
+    implementation 'com.amplifyframework:aws-api:1.35.2'
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
