recycler fixed, numberpicker, dialog

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,10 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    //  뷰 바인딩 사용 설정
+    buildFeatures{
+        viewBinding = true
+    }
 }
 
 dependencies {
