--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -33,9 +33,9 @@
             {
               "authenticationType": "API_KEY",
               "apiKeyConfig": {
-                "apiKeyExpirationDays": 199,
-                "apiKeyExpirationDate": "2022-11-17T11:51:13.221Z",
-                "description": "dxzfv"
+                "apiKeyExpirationDays": 70,
+                "apiKeyExpirationDate": "2022-07-11T16:34:50.572Z",
+                "description": "yyy"
               }
             }
           ]
