--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,12 +34,13 @@ android {
 
 dependencies {
     implementation 'com.amplifyframework:core:1.35.2'
-    implementation 'com.android.car.ui:car-ui-lib:+'
+    implementation 'com.android.car.ui:car-ui-lib:2.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
     implementation 'com.amplifyframework:aws-auth-cognito:1.35.2'
     implementation 'com.amplifyframework:core:1.35.2'
     implementation 'com.amplifyframework:aws-api:1.35.2'
+
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
