--- a/app/src/main/res/raw/amplifyconfiguration.json
+++ b/app/src/main/res/raw/amplifyconfiguration.json
@@ -6,10 +6,10 @@
             "awsAPIPlugin": {
                 "mysprout": {
                     "endpointType": "GraphQL",
-                    "endpoint": "https://yvv3rgdj25apnfej4b4uftkabi.appsync-api.us-west-2.amazonaws.com/graphql",
+                    "endpoint": "https://7l3rtskunrfe3nl3blv2j3vp3q.appsync-api.us-west-2.amazonaws.com/graphql",
                     "region": "us-west-2",
                     "authorizationType": "AMAZON_COGNITO_USER_POOLS",
-                    "apiKey": "da2-bfggoiruerbsdi57ug64udapqe"
+                    "apiKey": "da2-vsyhzf7z4raohgxua4m6twjlfm"
                 }
             }
         }
@@ -68,17 +68,23 @@
                 },
                 "AppSync": {
                     "Default": {
-                        "ApiUrl": "https://yvv3rgdj25apnfej4b4uftkabi.appsync-api.us-west-2.amazonaws.com/graphql",
+                        "ApiUrl": "https://7l3rtskunrfe3nl3blv2j3vp3q.appsync-api.us-west-2.amazonaws.com/graphql",
                         "Region": "us-west-2",
                         "AuthMode": "AMAZON_COGNITO_USER_POOLS",
                         "ClientDatabasePrefix": "mysprout_AMAZON_COGNITO_USER_POOLS"
                     },
                     "mysprout_API_KEY": {
-                        "ApiUrl": "https://yvv3rgdj25apnfej4b4uftkabi.appsync-api.us-west-2.amazonaws.com/graphql",
+                        "ApiUrl": "https://7l3rtskunrfe3nl3blv2j3vp3q.appsync-api.us-west-2.amazonaws.com/graphql",
                         "Region": "us-west-2",
                         "AuthMode": "API_KEY",
-                        "ApiKey": "da2-bfggoiruerbsdi57ug64udapqe",
+                        "ApiKey": "da2-vsyhzf7z4raohgxua4m6twjlfm",
                         "ClientDatabasePrefix": "mysprout_API_KEY"
+                    },
+                    "mysprout_AWS_IAM": {
+                        "ApiUrl": "https://7l3rtskunrfe3nl3blv2j3vp3q.appsync-api.us-west-2.amazonaws.com/graphql",
+                        "Region": "us-west-2",
+                        "AuthMode": "AWS_IAM",
+                        "ClientDatabasePrefix": "mysprout_AWS_IAM"
                     }
                 }
             }
