--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,9 +50,13 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    //리사이클러 뷰
+    //recycler
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
     //horizontal numberpicker
     implementation 'com.github.travijuu:numberpicker:1.0.7'
+
+    //Lottie
+    def lottieVersion = "5.0.3"
+    implementation "com.airbnb.android:lottie:$lottieVersion"
 }
