--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.mysprout">
     <!-- Tell the system this app requires OpenGL ES 3.1. -->
-    <uses-feature android:glEsVersion="0x00020000" android:required="true" />
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -14,6 +16,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MySprout">
+        <activity
+            android:name=".Home"
+            android:exported="false" />
         <activity
             android:name=".GameActivity"
             android:exported="true" />
@@ -25,21 +30,18 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!--남은수-->
-        <activity android:name=".UserInformation"/>
-        <activity android:name=".UserInformationMeat"/>
-        <activity android:name=".UserInformationTransport"/>
-        <activity android:name=".MainSprout"/>
-        <activity android:name=".RecordHabits"/>
-        <activity android:name=".RecordComplete"/>
-        <activity android:name=".GrowSprout"/>
-        <activity android:name=".RecordFood"/>
-        <activity android:name=".Menu"/>
-        <activity android:name=".MySprout"/>
+        </activity> <!-- 남은수 -->
+        <activity android:name=".UserInformation" />
+        <activity android:name=".UserInformationMeat" />
+        <activity android:name=".UserInformationTransport" />
+        <activity android:name=".MainSprout" />
+        <activity android:name=".RecordHabits" />
+        <activity android:name=".RecordComplete" />
+        <activity android:name=".GrowSprout" />
+        <activity android:name=".RecordFood" />
+        <activity android:name=".Menu" />
+        <activity android:name=".MySprout" />
         <activity android:name=".Login" />
-
     </application>
 
 </manifest>
