--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
     <application
+        android:networkSecurityConfig="@xml/network_security_config"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -27,9 +28,6 @@
         <activity
             android:name=".RecordStep"
             android:exported="false" />
-        <activity
-            android:name=".StepTest"
-            android:exported="true" />
         <activity
             android:name=".Home"
             android:exported="false" />
