--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,8 +37,8 @@ dependencies {
     implementation 'com.amplifyframework:core:1.35.2'
     implementation 'com.android.car.ui:car-ui-lib:2.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation("com.google.android.gms:play-services-fitness:21.0.1")
-    implementation("com.google.android.gms:play-services-auth:20.2.0")
+    implementation'com.google.android.gms:play-services-fitness:21.0.1'
+    implementation'com.google.android.gms:play-services-auth:20.2.0'
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
     implementation 'com.amplifyframework:aws-auth-cognito:1.35.2'
     implementation 'com.amplifyframework:core:1.35.2'
